# rtl-debugger

./: .gitignore  AGENT_GUIDE.md  AI_INTEGRATION.md  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements.txt  setup.py  skill.json
src/: __init__.py  main.py
test/: AI_WORKFLOW_DEMO_REPORT.txt  always_test.v  axi_filelist.f  bit_select_test.v  case_test.v  complex_define_test.v  comprehensive_test.py  cross_module.f  cross_module_test.v  define_test.v  defs.vh  demo_ai_workflow.py  design.v  env_filelist.f  error_designs.v  filelist_main.f  filelist_sub.f  generate_for_test.v  generate_if_test.v  include_test.v  instance_test.v  nested_include_test.v  p1_fix_test.v  param_test.v  parameter_module_test.v  result_gen.v  run_tests.py  single_step_test.v  sub_test.v  test_design.v  test_filelist.f  test_p1_fixes.py  test_p2_fixes.py  test_timing_errors.py  top_test.v
test/sub/: module.v
tests/: test_basic.py
tools/: advanced_reasoner.py  enhanced_debug_analyzer.py  interactive_debug_analyzer.py  interactive_debugger.py  rtl_query.py  vcd_analyze.py  vcd_intelligent.py  vcd_protocol.py  vcd_query.py  vcd_smart.py  vcd_stream.py  vcd_stream_v2.py
