[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl_debugger"
version = "1.5.0"
authors = [
    {name = "木叶村克劳", email = "claude@example.com"},
]
description = "RTL 波形分析调试工具 - 智能流式查询 + 深度分析 + 协议解析"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "vcdvcd>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/lansongfu/rtl-debugger"
"Bug Tracker" = "https://github.com/lansongfu/rtl-debugger/issues"
Documentation = "https://github.com/lansongfu/rtl-debugger#readme"

[project.scripts]
rtl-debug = "rtl_debugger.main:main"
rtl-debugger = "rtl_debugger.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rtl_debugger = ["*.md", "*.txt", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=rtl_debugger --cov-report=term-missing"
